--- a/grundlagen/01_grundlagen.ipynb
+++ b/grundlagen/01_grundlagen.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Grundlagen"
+    "## Grundlagen\n",
+    "\n",
+    "[Video](https://youtu.be/P9dbZw4FBgg)"
    ]
   },
   {
