--- a/grundlagen/01_grundlagen_uebungen.ipynb
+++ b/grundlagen/01_grundlagen_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "ac08f100-6c69-4f73-96ab-950e2c73f21f",
    "metadata": {},
    "source": [
-    "### Grundlagen - Übungen"
+    "### Grundlagen - Übungen\n",
+    "\n",
+    "[Video](https://youtu.be/4o6ksEhx_Rw)"
    ]
   },
   {
