--- a/grundlagen/02_strings.ipynb
+++ b/grundlagen/02_strings.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Strings (Teil 1), Input, f-Strings\n",
     "\n",
+    "[Video](https://youtu.be/DNAUqOCkY6E)\n",
+    "\n",
     "Strings sind Zeichenketten, sie werden in einfachen oder doppelten Hochkommata eingeschlossen. \n",
     "Strings, die über mehrere Zeilen gehen, werden mit dreifachen Hochkommata gebildet.\n"
    ]
@@ -150,7 +152,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Wie ist dein Vorname? Malte\n"
@@ -176,7 +178,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine ganze Zahl eingeben: 5\n"
@@ -212,7 +214,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine ganze Zahl eingeben: 5\n"
@@ -291,7 +293,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gib bitte den Radius des Kreises an: 5.2\n"
