--- a/grundlagen/02_strings_uebungen.ipynb
+++ b/grundlagen/02_strings_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "01b604a9-4dd6-4b9f-9cc9-045d2d1be143",
    "metadata": {},
    "source": [
-    "### Strings (Teil 1), Input, f-Strings - Aufgaben"
+    "### Strings (Teil 1), Input, f-Strings - Aufgaben\n",
+    "\n",
+    "[Video](https://youtu.be/MOSVKMOLjH8)"
    ]
   },
   {
