--- a/grundlagen/03_bedingungen.ipynb
+++ b/grundlagen/03_bedingungen.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Bedingungen \n",
     "\n",
+    "[Video](https://youtu.be/KFkV3_PHjTE)\n",
+    "\n",
     "Mit bedingten Anweisungen können wir Verzweigungen im Programmfluss erreichen. Die Einrückung bestimmt, welche Anweisungen\n",
     "in den Rumpf der if-Anweisung gehören.\n",
     "\n",
@@ -251,7 +253,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine ganze Zahl eingeben 13\n"
@@ -295,7 +297,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine positive ganze Zahl a eingeben 12\n",
@@ -349,7 +351,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine positive ganze Zahl eingeben: 7\n"
