--- a/grundlagen/03_bedingungen_uebungen.ipynb
+++ b/grundlagen/03_bedingungen_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "9c4196ee-8905-4724-98f3-04360946efd9",
    "metadata": {},
    "source": [
-    "### Bedingungen - Übungen"
+    "### Bedingungen - Übungen\n",
+    "\n",
+    "[Video](https://youtu.be/yyGxTync0zU)"
    ]
   },
   {
