--- a/grundlagen/04_schleifen.ipynb
+++ b/grundlagen/04_schleifen.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Schleifen\n",
     "\n",
+    "[Video](https://youtu.be/CJ7HYf3bMA8)\n",
+    "\n",
     "#### while-Schleife\n",
     "\n",
     "Der Rumpf der while-Schleife wird solange durchlaufen, bis die while-Bedingung sich zu False auswertet. "
@@ -170,7 +172,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine Zahl von 1-10 eingeben 7\n"
@@ -311,7 +313,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 5\n",
