--- a/grundlagen/04_schleifen_uebungen.ipynb
+++ b/grundlagen/04_schleifen_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "5cd0569f-1f46-4dc0-8fdd-02fc0da4915e",
    "metadata": {},
    "source": [
-    "### Schleifen- Übungen"
+    "### Schleifen- Übungen\n",
+    "\n",
+    "[Video](Schleifen)"
    ]
   },
   {
