--- a/grundlagen/05_strings2_uebungen.ipynb
+++ b/grundlagen/05_strings2_uebungen.ipynb
@@ -5,7 +5,8 @@
    "id": "b36126c8-f7db-4ce3-84d3-50846839cc45",
    "metadata": {},
    "source": [
-    "### Strings2 - Uebungen"
+    "### Strings2 - Uebungen\n",
+    "\n"
    ]
   },
   {
