--- a/grundlagen/02_strings_uebungen.ipynb
+++ b/grundlagen/02_strings_uebungen.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Strings (Teil 1), Input, f-Strings - Aufgaben\n",
     "\n",
-    "[Video](https://youtu.be/MOSVKMOLjH8)"
+    "[Video](https://youtu.be/vLMyigH06jo)"
    ]
   },
   {
