--- a/grundlagen/05_strings2_uebungen.ipynb
+++ b/grundlagen/05_strings2_uebungen.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "### Strings2 - Uebungen\n",
-    "\n"
+    "\n",
+    "[Video](https://youtu.be/MOSVKMOLjH8)"
    ]
   },
   {
