--- a/grundlagen/06_listen.ipynb
+++ b/grundlagen/06_listen.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Listen\n",
     "\n",
+    "[Video](https://youtu.be/_bTT55k7Ps0)\n",
+    "\n",
     "In einer Liste können wir mehrere Werte abspeichern.\n"
    ]
   },
@@ -624,7 +626,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte mit Leerzeichen getrennt ein paar ganze Zahlen eingeben: 4 23 9 8\n"
