--- a/grundlagen/06_listen_uebungen.ipynb
+++ b/grundlagen/06_listen_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "7a3ab31d-c65d-438c-9858-5c18bcb40423",
    "metadata": {},
    "source": [
-    "### Listen - Übungen"
+    "### Listen - Übungen\n",
+    "\n",
+    "[Video](https://youtu.be/B-iG9Ig36uU)"
    ]
   },
   {
