--- a/grundlagen/07_dicts.ipynb
+++ b/grundlagen/07_dicts.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "### Dictionaries\n",
     "\n",
+    "[Video](https://youtu.be/VKc74mH47Hk)\n",
+    "\n",
     "Bei Listen können wir über einen **index** auf einen **value** zugreifen. Der Index ist vom Datentyp int. <br>\n",
     "Bei Dictionaries können wir über einen **key** auf einen **value** zugreifen. Als Datentypen für keys können wir z.B. ints, strings oder tuples verwenden.\n"
    ]
