--- a/grundlagen/07_dicts_uebungen.ipynb
+++ b/grundlagen/07_dicts_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "4facc12d-2702-4f2c-9e6d-fa7fa1d3d080",
    "metadata": {},
    "source": [
-    "### Dictionaries - Übungen\n"
+    "### Dictionaries - Übungen\n",
+    "\n",
+    "[Video](https://youtu.be/KrG0cS_GoGQ)\n"
    ]
   },
   {
