--- a/grundlagen/08_tupel.ipynb
+++ b/grundlagen/08_tupel.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "### Tuples\n",
     "\n",
+    "[Video](https://youtu.be/CaSzuKQ2vnc)\n",
+    "\n",
     "Tuples sind wie Listen, sie können aber nicht mit *append* verändert werden. Dafür können sie keys von dictionaries sein.\n",
     "\n",
     "\n"
