--- a/grundlagen/10_dateizugriff.ipynb
+++ b/grundlagen/10_dateizugriff.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Dateizugriff\n",
     "\n",
+    "[Video](https://youtu.be/8R391aor7L4)\n",
+    "\n",
     "Vor dem Lesen oder Schreiben in eine Datei öffnen wir die Datei mit *open*. Nach der Verarbeitung schließen wir die Datei mit *close*."
    ]
   },
