--- a/grundlagen/10_dateizugriff_uebungen.ipynb
+++ b/grundlagen/10_dateizugriff_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "344526d9-0702-4e47-98ef-c78385432056",
    "metadata": {},
    "source": [
-    "### Dateizugriff - Übungen\n"
+    "### Dateizugriff - Übungen\n",
+    "\n",
+    "[Video](https://youtu.be/uwjM4wJfY-0)\n"
    ]
   },
   {
