--- a/grundlagen/05_strings2.ipynb
+++ b/grundlagen/05_strings2.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Strings 2\n",
     "\n",
+    "[Video](https://youtu.be/nBoLTJF7nCU)\n",
+    "\n",
     "##### Leerer String"
    ]
   },
@@ -528,7 +530,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bitte eine String eingeben: abc\n",
