--- a/grundlagen/08_tuples_uebungen.ipynb
+++ b/grundlagen/08_tuples_uebungen.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Tuples - Übungen\n",
     "\n",
+    "[Video](https://youtu.be/rYYuEpmIbBo)\n",
+    "\n",
     "Manchmal stehen bei den Aufgaben keine erwarteten Ausgaben, weil dadurch zu viel von der Lösung verraten wird."
    ]
   },
