--- a/grundlagen/09_functionen.ipynb
+++ b/grundlagen/09_functionen.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "### Funktionen\n",
     "\n",
+    "[Video]()\n",
+    "\n",
     "Mit Funktionen fassen wir Codeabschnitte zusammen. Das macht unsere Programme übersichtlicher und wir können die Codeabschnitte besser testen."
    ]
   },
