--- a/grundlagen/09_functionen.ipynb
+++ b/grundlagen/09_functionen.ipynb
@@ -7,61 +7,144 @@
    "source": [
     "### Funktionen\n",
     "\n",
-    "Mit Funktionen fassen wir Codeabschnitte zusammen. Das macht unsere Programme übersichtlicher und wir können die Codeabschnitte besser testen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c458ebd8-9b01-4cb8-a5b4-a4de648264e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****\n"
-     ]
-    }
-   ],
-   "source": [
-    "def sterne(k):        \n",
-    "    return k * '*'      \n",
+    "[Video](https://youtu.be/UvijSqkf_-w)\n",
     "\n",
-    "b = sterne(5)           # k erhält durch den Aufruf den Wert 12\n",
-    "print(b)"
+    "In Funktionen fassen wir Codeabschnitte zu einer Einheit zusammen.\n",
+    "\n",
+    "![](bild1.png)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ac407383-2705-4f27-bfc7-52392be6c64b",
+   "execution_count": 27,
+   "id": "f9d182bb-3ab2-4c18-ac3b-628654ce9e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc(x, y):\n",
+    "    z = x + y\n",
+    "    z = 3*z + 1\n",
+    "    return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ab3655fc-ec1c-4c99-86fa-17039504b741",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "********************\n"
+      "19\n"
      ]
     }
    ],
    "source": [
-    "print(sterne(20))"
+    "a = calc(2,4)\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "713a9123-fad8-473a-bb7f-2ce4b51335c3",
+   "id": "3f954184-a590-4519-9d24-b372c9548bf9",
    "metadata": {},
    "source": [
-    "Eine Funktion kann mehrere Parameter enthalten. Beim Aufruf werden die Argumente in der gleichen Reihenfolge den Parametern übergeben.\n",
-    "Zur Dokumentation von Funktionen nutzen wir manchmal einen Docstring. Ein Beispielaufruf wird mit >>> gekennzeichnet und das erwartete Ergebnis wird in die nächste Zeile geschrieben."
+    "\n",
+    "\n",
+    "In einem *docstring*  können wir beschreiben, wie die Funktion aufgerufen wird und was sie zurückgibt.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
+   "id": "e193797f-260e-4eee-b488-6b5ceebb4ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def zeichen(k, s):       \n",
+    "    '''\n",
+    "    k: positive ganze Zahl, s: String \n",
+    "    returns: k mal den String s\n",
+    "\n",
+    "    >>> zeichen(5, 'x')\n",
+    "    'xxxxx'\n",
+    "\n",
+    "    >>> zeichen(3, 'ha')\n",
+    "    'hahaha'\n",
+    "    '''\n",
+    "    return k * s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "59d1801d-ff34-411f-851f-c1bd2b29a2f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hahaha\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = zeichen(3,'ha')\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bcd0bd3-8b66-499d-ac2d-3643b5fb1752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def div(x, y):\n",
+    "    '''\n",
+    "    x, y: zwei positive Zahlen\n",
+    "    returns: die kleinere dividiert durch die größere Zahl\n",
+    "\n",
+    "    >>> div(5, 10)\n",
+    "    0.5\n",
+    "\n",
+    "    >>> div(8, 2)\n",
+    "    0.25\n",
+    "\n",
+    "    >>> div(4, 4)\n",
+    "    1.0\n",
+    "    '''\n",
+    "    if x < y:\n",
+    "        return x/y\n",
+    "    else:\n",
+    "        return y/x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0b0083b8-750b-4db2-8f86-68e931fda4be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = div(20,15)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "f271244d-bc15-4c69-ada3-016ec72f1d5e",
    "metadata": {},
    "outputs": [],
@@ -79,46 +162,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "7a0566ad-f969-4e34-822f-76562d511adf",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "135"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n"
+     ]
     }
    ],
    "source": [
-    "zeit_in_minuten(2,15)"
+    "x = zeit_in_minuten(2,15)\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "01796f6f-26a8-4efe-80b8-e231f4e5e2a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tup_change(tup, i, k):\n",
-    "    ''' returns: tuple wie tup, aber an Stelle i steht k \n",
+    "def mittelwert(a):\n",
+    "    ''' a: Liste mit Zahlen\n",
+    "    returns: den Mittelwert der Zahlen\n",
     "    \n",
-    "    >>> tup_change((1,2,3),0,4)\n",
-    "    (4,2,3)    \n",
+    "    >>> mittelwert([10, 20])\n",
+    "    15.0\n",
     "    '''\n",
-    "    a = list(tup)\n",
-    "    a[i] = k\n",
-    "    return tuple(a)"
+    "    return sum(a)/len(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "4ee83333-9c19-401c-b610-64fc025f4b7d",
    "metadata": {},
    "outputs": [
@@ -126,146 +206,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 2, 7)\n"
+      "15.0\n"
      ]
     }
    ],
    "source": [
-    "t1 = (4,2,9)\n",
-    "t2 = tup_change(t1,2,7)\n",
-    "print(t2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d9e958c-2bf2-45c6-8e6d-455a35bab8cd",
-   "metadata": {},
-   "source": [
-    "Manchmal gibt die Funktion nichts zurück, sondern macht nur eine Ausgabe."
+    "a = [10, 20]\n",
+    "x = mittelwert(a)\n",
+    "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d64a9c38-5409-4841-823e-66d521b56add",
+   "execution_count": null,
+   "id": "bb5340db-cfc5-45aa-b708-3e19e3a33afd",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def ueberschrift(s):\n",
-    "    print(s)\n",
-    "    print('='*len(s))    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "58987234-948a-47ac-beaf-d5bff28d6065",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Informatik\n",
-      "==========\n"
-     ]
-    }
-   ],
-   "source": [
-    "ueberschrift('Informatik')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "65cf3d45-cc56-4b90-84d9-923b355c374f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 3\n",
-      "4 5 6\n",
-      "7 8 9\n"
-     ]
-    }
-   ],
-   "source": [
-    "def show(t):\n",
-    "    '''\n",
-    "    t: Tuple der Länge 9\n",
-    "    printed tup als 3 x 3 grid aus\n",
-    "    '''\n",
-    "    for i in range(0,9,3):\n",
-    "        print(f'{t[i]} {t[i+1]} {t[i+2]}')\n",
-    "\n",
-    "t = (1,2,3,4,5,6,7,8,9)\n",
-    "show(t)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8370efc-7cbb-4ad7-bb22-afd04467f74f",
-   "metadata": {},
-   "source": [
-    "#### Globale und lokale Variablen.\n",
-    "\n",
-    "Globale Variablen sind Variablen, die außerhalb der Funktion definiert werden. Variablen die innerhalb der Funktion definiert werden (auch die Parameter) heißen lokale Variablen. Lokale Variablen können nur innerhalb der Funktion verwendet werden. Auf globale Variablen können wir auch innerhalb von Funktionen lesend zugreifen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "7025395e-1eee-47c7-a6ff-12491ab74680",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********\n"
-     ]
-    }
-   ],
-   "source": [
-    "zeichen = '*'                       # zeichen ist globale Variable\n",
-    "def vervielfache(k):\n",
-    "    x = 2 * k                       # k, x sind lokale Variablen\n",
-    "    return x*zeichen                      \n",
-    "\n",
-    "print(vervielfache(5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bac4fd89-d229-47d5-badd-4bda8d26d455",
-   "metadata": {},
-   "source": [
-    "Wenn möglich, sollen Funktionen alles was sie für ihre Arbeit benötigen, über Parameter erhalten und nicht durch Zugriff auf globale Variablen. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "72d856b1-f7ab-4d26-b732-6fbfb86bdec9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********\n"
-     ]
-    }
-   ],
-   "source": [
-    "def vervielfache(k, zeichen):\n",
-    "    x = 2 * k                       \n",
-    "    return x*zeichen                      \n",
-    "\n",
-    "print(vervielfache(5, '*'))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
