--- a/grundlagen/09_functionen_uebungen.ipynb
+++ b/grundlagen/09_functionen_uebungen.ipynb
@@ -5,7 +5,9 @@
    "id": "158a07ee-a0d5-46f2-bb5c-1854f4bc289e",
    "metadata": {},
    "source": [
-    "### Funktionen Übungen"
+    "### Funktionen Übungen\n",
+    "\n",
+    "[Video](https://youtu.be/tbwsrpnwDT8)"
    ]
   },
   {
@@ -23,9 +25,7 @@
     ">>> gerade(11)\n",
     "False\n",
     "'''\n",
-    "# your code \n",
-    "def gerade(n):\n",
-    "    return n % 2 == 0"
+    "# your code \n"
    ]
   },
   {
@@ -63,9 +63,7 @@
     ">>> tausche((1,0))\n",
     "(0, 1)\n",
     "'''\n",
-    "# your code\n",
-    "def tausche(t):\n",
-    "    return (t[1],t[0])\n"
+    "# your code\n"
    ]
   },
   {
@@ -82,8 +80,7 @@
     ">>> volumen_quader(2,3,4)\n",
     "24\n",
     "'''\n",
-    "def volumen_quader(breite, hoehe, tiefe):\n",
-    "    return breite*hoehe*tiefe"
+    "# your code"
    ]
   },
   {
@@ -103,9 +100,7 @@
     ">>> celsius_zu_fahrenheit(100)\n",
     "212.0\n",
     "'''\n",
-    "# your code\n",
-    "def celsius_zu_fahrenheit(celsius):\n",
-    "    return celsius * 9/5 + 32"
+    "# your code\n"
    ]
   }
  ],
