--- a/regulaereAusdruecke/regulaereAusdruecke.ipynb
+++ b/regulaereAusdruecke/regulaereAusdruecke.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reguläre Ausdrücke"
+    "# Reguläre Ausdrücke\n",
+    "\n",
+    "[Videos](https://www.youtube.com/playlist?list=PLWeMgMhRDsIFk8RPO6C3DzcQfBf8mTGn7)"
    ]
   },
   {
@@ -538,18 +540,11 @@
     "zeile = re.sub(r\"fill\\((#[A-Fa-f0-9]{6})\\);\", r\"fill('\\1');\", zeile)\n",
     "print(zeile)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -563,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
