--- a/matplotlib/matplotlib.ipynb
+++ b/matplotlib/matplotlib.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Matplotlib\n",
     "\n",
-    "[Video](https://youtu.be/zGrz3Ck9na8)\n",
+    "[Video](https://youtu.be/XovOhq3RDl4)\n",
     "\n",
     "Matplotlib ist eine Python-Bibliothek mit dem wir Plots zur Visualisierung von Daten erzeugen können.\n",
     "\n",
