--- a/arcade/arcade.ipynb
+++ b/arcade/arcade.ipynb
@@ -5,7 +5,9 @@
    "id": "ba528db6-fb2b-4719-9be7-6a17c943876f",
    "metadata": {},
    "source": [
-    "### Arcade"
+    "### Arcade\n",
+    "\n",
+    "[Video](https://youtu.be/-9uHE3oWaNY) - [Video2](https://youtu.be/0BRm8xiVwdE) - [Video3](https://youtu.be/Q-MVUHNKy0k)"
    ]
   },
   {
