--- a/arcade/arcade.ipynb
+++ b/arcade/arcade.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Arcade\n",
     "\n",
-    "[Video](https://youtu.be/-9uHE3oWaNY) - [Video2](https://youtu.be/0BRm8xiVwdE) - [Video3](https://youtu.be/Q-MVUHNKy0k)"
+    "[Video](https://youtu.be/-9uHE3oWaNY) - [Video2](https://youtu.be/0BRm8xiVwdE) - [Video3](https://youtu.be/Q-MVUHNKy0k) - [Video4](https://youtu.be/qAED20bIym0)"
    ]
   },
   {
