--- a/arcade/arcade2.ipynb
+++ b/arcade/arcade2.ipynb
@@ -101,6 +101,8 @@
    "source": [
     "#### Moving Platforms\n",
     "\n",
+    "[Video](https://youtu.be/oWHjVNM7v9o)\n",
+    "\n",
     "Wenn wir Sprites mit den Attributen \n",
     "\n",
     "    boundary_left\n",
@@ -110,7 +112,7 @@
     "der PhysicsEnginePlatformer über den Parameter *platforms=* in einer Spritelist übergeben, dann sorgt die engine für die Hin- und Herbewegung.\n",
     "Das genaue Mitfahren auf der Platform müssen wir im Code programmieren.\n",
     "\n",
-    "[Video](https://youtu.be/oWHjVNM7v9o)\n",
+    "\n",
     "\n"
    ]
   },
@@ -179,6 +181,132 @@
     "            self.player.change_x = PLAYER_MOVEMENT_SPEED\n",
     "\n",
     "    def on_key_release(self, key, modifiers):\n",
+    "        if key == arcade.key.LEFT:\n",
+    "            self.player.change_x = 0\n",
+    "        elif key == arcade.key.RIGHT:\n",
+    "            self.player.change_x = 0\n",
+    "\n",
+    "\n",
+    "def player_stands_on(player, platform):\n",
+    "    return platform.left < player.right and player.left < platform.right \\\n",
+    "        and abs(player.bottom - platform.top) < 5\n",
+    "\n",
+    "window = arcade.Window(600,600,title=\"Arcade\") \n",
+    "window.set_location(900, 100)  \n",
+    "game = GameView()\n",
+    "window.show_view(game)\n",
+    "arcade.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6dea517-3b52-405c-a135-5d4242009817",
+   "metadata": {},
+   "source": [
+    "#### Leiter\n",
+    "\n",
+    "Die *PhysicsEnginePlatformer* hat einen eigenen Parameter für Leiter-Sprites. Leiter sind Sprites, auf denen sich unser Player mit den Pfeiltasten bewegen kann. Die Gravitation ist ausgesetzt. \n",
+    "\n",
+    "[Video](https://youtu.be/5EzimXNcXHg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2686e7cf-66ba-4d94-af7c-9d3ac2d1bcf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arcade\n",
+    "\n",
+    "PLAYER_MOVEMENT_SPEED = 5\n",
+    "GRAVITY = 1\n",
+    "PLAYER_JUMP_SPEED = 10\n",
+    "\n",
+    "class GameView(arcade.View):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # background\n",
+    "        self.background_color = arcade.csscolor.CORNFLOWER_BLUE\n",
+    "\n",
+    "        # sounds\n",
+    "        self.jump_sound = arcade.load_sound(\":resources:sounds/jump2.wav\")\n",
+    "\n",
+    "        # walls and ladders\n",
+    "        layer_options = {\"Walls\": {\"use_spatial_hash\": True}}\n",
+    "        tile_map = arcade.load_tilemap('map.tmx',layer_options=layer_options,scaling=0.5)\n",
+    "        self.scene = arcade.Scene.from_tilemap(tile_map)\n",
+    "\n",
+    "        # player\n",
+    "        self.player = arcade.Sprite(':resources:/images/animated_characters/female_adventurer/femaleAdventurer_idle.png')\n",
+    "        self.player.position = (30, 200)\n",
+    "        self.scene.add_sprite(\"Player\", self.player)\n",
+    "\n",
+    "        # platforms\n",
+    "        self.scene.add_sprite_list(\"Platforms\")        \n",
+    "        platform_texture = arcade.load_texture(':resources:/images/tiles/grassHalf.png')\n",
+    "        platforms_data = [(5*64, 2*64, 6*64, 1),(13*64 ,3*64, 9*64, 1.5)]\n",
+    "        for y, left, right, speed in platforms_data:\n",
+    "            sprite = arcade.Sprite(platform_texture, center_x=left, center_y=y,scale=0.5)\n",
+    "            sprite.boundary_left = left\n",
+    "            sprite.boundary_right = right\n",
+    "            sprite.change_x = speed\n",
+    "            self.scene.add_sprite(\"Platforms\", sprite)\n",
+    "\n",
+    "        # physics and camera\n",
+    "        self.physics_engine = arcade.PhysicsEnginePlatformer(self.player, walls=self.scene[\"Walls\"],\n",
+    "                                                             platforms=self.scene[\"Platforms\"],\n",
+    "                                                             ladders=self.scene[\"Ladders\"],\n",
+    "                                                             gravity_constant=GRAVITY)\n",
+    "        self.camera = arcade.Camera2D()\n",
+    "\n",
+    "    def on_update(self, delta_time):    \n",
+    "\n",
+    "        # scene\n",
+    "        self.scene.update(delta_time)   \n",
+    "\n",
+    "        # player on platform \n",
+    "        for platform in self.scene['Platforms']:\n",
+    "            if player_stands_on(self.player, platform):\n",
+    "                self.player.center_x += platform.change_x\n",
+    "\n",
+    "        # physics and camera\n",
+    "        self.camera.position = self.player.position\n",
+    "        self.physics_engine.update()\n",
+    "\n",
+    "    def on_draw(self):\n",
+    "        self.clear()\n",
+    "        self.camera.use()\n",
+    "        self.scene.draw()         \n",
+    "\n",
+    "    def on_key_press(self, key, modifiers):\n",
+    "        \n",
+    "        if key == arcade.key.UP:\n",
+    "            if self.physics_engine.is_on_ladder():\n",
+    "                self.player.change_y = PLAYER_MOVEMENT_SPEED\n",
+    "            elif self.physics_engine.can_jump():\n",
+    "                self.player.change_y = PLAYER_JUMP_SPEED\n",
+    "                arcade.play_sound(self.jump_sound)\n",
+    "\n",
+    "        elif key == arcade.key.DOWN:\n",
+    "            if self.physics_engine.is_on_ladder():\n",
+    "                self.player.change_y = -PLAYER_MOVEMENT_SPEED\n",
+    "\n",
+    "        if key == arcade.key.LEFT:\n",
+    "            self.player.change_x = -PLAYER_MOVEMENT_SPEED\n",
+    "        elif key == arcade.key.RIGHT:\n",
+    "            self.player.change_x = PLAYER_MOVEMENT_SPEED\n",
+    "\n",
+    "    def on_key_release(self, key, modifiers):\n",
+    "\n",
+    "        if key == arcade.key.UP:\n",
+    "            if self.physics_engine.is_on_ladder():\n",
+    "                self.player.change_y = 0\n",
+    "        elif key == arcade.key.DOWN:\n",
+    "            if self.physics_engine.is_on_ladder():\n",
+    "                self.player.change_y = 0\n",
+    "\n",
     "        if key == arcade.key.LEFT:\n",
     "            self.player.change_x = 0\n",
     "        elif key == arcade.key.RIGHT:\n",
