--- a/arcade/arcade2.ipynb
+++ b/arcade/arcade2.ipynb
@@ -214,7 +214,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2686e7cf-66ba-4d94-af7c-9d3ac2d1bcf1",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import arcade\n",
@@ -321,9 +327,7 @@
     "window.set_location(900, 100)  \n",
     "game = GameView()\n",
     "window.show_view(game)\n",
-    "arcade.run()\n",
-    " \n",
-    "\n"
+    "arcade.run()"
    ]
   }
  ],
