--- a/grundlagen/09_functionen_uebungen.ipynb
+++ b/grundlagen/09_functionen_uebungen.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0e64b62d-8dad-4f37-95f6-d7a789024457",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
     "\n",
     ">>> umfang(1, 3)\n",
     "8\n",
-    ">>> gerade(1, 1)\n",
+    ">>> umfang(1, 1)\n",
     "4\n",
     "\n",
     "'''\n",
