--- a/graphviz/graphviz.ipynb
+++ b/graphviz/graphviz.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Graphviz\n",
     "\n",
-    "[Video](8https://youtu.be/X9eXLHfRoUc)"
+    "[Video](https://youtu.be/X9eXLHfRoUc)"
    ]
   },
   {
