--- a/grundlagen/04_schleifen_uebungen.ipynb
+++ b/grundlagen/04_schleifen_uebungen.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Schleifen- Übungen\n",
     "\n",
-    "[Video](Schleifen)"
+    "[Video](https://youtu.be/PpCWBTAaCmQ)"
    ]
   },
   {
