--- a/grundlagen/03_bedingungen.ipynb
+++ b/grundlagen/03_bedingungen.ipynb
@@ -17,18 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "57d48525-a832-4e8b-ba0c-094ca1bbcf17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ende\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "if x > 1:\n",
@@ -47,18 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "61604653-1cd1-40f5-b564-a99228fae4c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "if x > 1:\n",
@@ -78,19 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e1d10837-9f3b-4d7c-bb9d-6d576e340fd7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D\n",
-      "Ende\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "if x > 3:\n",
@@ -114,19 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "cc28fe0f-022b-4cd0-8884-13de779716c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B\n",
-      "C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 2.5\n",
     "if x > 3:\n",
@@ -149,19 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "649fdeaf-1728-4c61-870d-8676eb925a3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B\n",
-      "B\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 1\n",
     "# statt\n",
@@ -173,6 +130,26 @@
     "# geht auch\n",
     "if x > 2: print('A')\n",
     "else: print('B') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "23c67270-82e0-4d0f-84ed-8e5a6f2d3e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "c = x > 2\n",
+    "print(c)"
    ]
   },
   {
@@ -189,19 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b1ec34b4-682f-4956-9cfe-2b93faf4d4d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 2\n",
     "print(x > 1)\n",
@@ -218,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "89d00c2f-bb76-466f-a9c1-611f21c9c4bf",
    "metadata": {},
    "outputs": [
@@ -248,15 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "7220e527-9836-4da8-a4a3-dbe1fdca66d8",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Bitte eine ganze Zahl eingeben 18\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bitte eine ganze Zahl eingeben 13\n"
+      "Die Zahl 18 ist gerade.\n"
      ]
     },
     {
@@ -285,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "f6b02b1c-405b-4acd-bc29-ab5b353810c4",
    "metadata": {},
    "outputs": [
@@ -294,6 +269,21 @@
      "output_type": "stream",
      "text": [
       "Ich prüfe, ob a durch b teilbar ist.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Bitte eine positive ganze Zahl a eingeben 72\n",
+      "Bitte eine positive ganze Zahl b eingeben 12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Zahl 72 ist durch 12 teilbar.\n"
      ]
     },
     {
@@ -337,6 +327,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af2d8442-a37b-411e-8ee3-5a2c57ede166",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4 > 6 or 8 < 10 or 3 > 8 )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e97606c6-9e8c-4f14-9f76-cc037b2f6b71",
    "metadata": {},
@@ -346,15 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "8f4f01e8-01a0-45de-98fb-d37561ccaee9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Bitte eine positive ganze Zahl eingeben: 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Zahl 7 ist weder durch 3 und noch durch 5 teilbar.\n"
      ]
     },
     {
@@ -406,18 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4e83d48f-7729-412c-a470-929eac01fe73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gerade\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 6\n",
     "res = 'Gerade' if x % 2 == 0 else 'Ungerade'\n",
@@ -426,18 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "38b34b7e-6933-4ea4-94b5-33412a278845",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nicht volljaehrig\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alter = 17\n",
     "status = 'volljaehrig' if alter >= 18 else 'nicht volljaehrig'\n",
