--- a/grundlagen/01_grundlagen.ipynb
+++ b/grundlagen/01_grundlagen.ipynb
@@ -186,8 +186,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Für besonders häufig vorkommende Zuweisungen gibt es Kurzformen"
+    "Für besonders häufig vorkommende Zuweisungen gibt es Kurzformen."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
